--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
           <p>Heritage Institute of Technology</p>
         </div>
         <hr class="small-hr" />
+        <!--
         <div class="container">
           <p>Thank you all for amazing responses.<br/>
-          We have joint winners for the  T-Shirt design competition.
-          We will get in touch with the winners for their pass and T-shirt.<br/>
-          <b>Congratulations!</b>
-        </p>
+            We have joint winners for the  T-Shirt design competition.
+            We will get in touch with the winners for their pass and T-shirt.<br/>
+            <b>Congratulations!</b>
+            </p>
           <div class="row" style="padding: 20px 0px;">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
             <img src="img/1.jpg" alt="quoTED Winner 1" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;"/>
@@ -118,6 +119,7 @@
             </div>
           </div>
         </div>
+      -->
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.653208021584!2d88.41667224694913!3d22.517190965137427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDMxJzAyLjMiTiA4OMKwMjUnMDcuMyJF!5e0!3m2!1sen!2sin!4v1542473158222"
           width="600"
@@ -311,6 +313,50 @@
                   <hr />
                   <p>
                     Anindya Chatterjee is one of the most versatile and talented actors of Bengali movies.
+                  </p>
+                  <hr />
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
+              <div class="card" data-toggle="modal" data-target="#modal-seven">
+                <div class="box">
+                  <div class="img">
+                    <img
+                      src="img/speakers/7.jpg"
+                      alt="Neelanjana Sengupta's portrait."
+                      />
+                  </div>
+                  <h2>
+                    Neelanjana Sengupta<br /><span
+                      >Computational Biologist<br>IISER Kolkata<br><br><br>
+                    </span>
+                  </h2>
+                  <hr />
+                  <p>
+                  Major in Nuclear Physics and Doctorate in the domain of computer simulations of biomolecular systems
+                  </p>
+                  <hr />
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
+              <div class="card" data-toggle="modal" data-target="#modal-eight">
+                <div class="box">
+                  <div class="img">
+                    <img
+                      src="img/speakers/8.jpg"
+                      alt="Shouvik Kumar Guha's portrait."
+                      />
+                  </div>
+                  <h2>
+                    Shouvik Kumar Guha<br /><span
+                      >Law Professor at<br>National University of Juridical Sciences<br><br>           
+                    </span>
+                  </h2>
+                  <hr />
+                  <p>
+                    Recipient of the Nani Palkhivala Gold Medal and Gopal Subramanium scholarship
                   </p>
                   <hr />
                 </div>
@@ -659,7 +705,7 @@
               <button type="button" class="close" data-dismiss="modal">
               &times;
               </button>
-              <img src="img/speakers/6.jpg" alt="Smriti Dewan's portrait." />
+              <img src="img/speakers/6.jpg" alt="Anindya Chatterjee's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Anindya Chatterjee</h3>
                 Actor, Campaigner against<br/>drug abuse and illicit trafficking
@@ -671,6 +717,79 @@
                 He actually hailed from being behind the camera background and acting happened later. He still does a lot of production works. He has been an integral part of super hit movies such as Chotushkone, Ami Ashbo Fire, Asche Abar shobor, Bela Seshe, Bapi Bari Ja and many more. Presently, he is shooting for the movie Belashuru.<br/><br/>
                 He has recovered from being an addict and currently, it's been 11 years that he is clean and sober. Such determination in life is highly applauded.<br/><br/>
                 Anindya Chatterjee is also a public-spirited person and is the brand ambassador of Kolkata Police for the 26th June international day against drug abuse and illicit trafficking and has been doing it for the past 4 years.<br/><br/>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="modal-seven" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+              &times;
+              </button>
+              <img src="img/speakers/7.jpg" alt="Neelanjana Sengupta's portrait." />
+              <div class="modal-title font-bolder">
+                <h3 class="font-bolder">Neelanjana Sengupta</h3>
+                Computational Biologist<br/>IISER Kolkata
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>
+                Neelanjana Sengupta, a computational biologist almost by accident. 
+                She had been a curious child who felt bothered unless she was able to grasp, 
+                at least conceptually, how ‘things worked’.<br><br>
+                She went on to study physics at the Bachelors and the Master's levels,
+                majoring in Nuclear Physics in the latter. However, a half year stint in a 
+                theoretical polymer physics group at IISC Bangalore kindled a new interest in 
+                ‘soft matter’, which broadly encompasses research in systems susceptible to thermal 
+                fluctuations. Subsequently, she went on to earn her Ph.D. at the University of 
+                California, Irvine in the domain of computer simulations of biomolecular systems 
+                in 2008. <br><br>
+                Neelanjana Sengupta is currently serving the Department of Biological Sciences at IISER Kolkata 
+                in 2016 as a ‘computational biophysicist'.
+                She is immensely grateful for the changing scientific landscape in the country that allows
+                interdisciplinary research such as hers to flourish.<br><br>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="modal-eight" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+              &times;
+              </button>
+              <img src="img/speakers/8.jpg" alt="Shouvik Kumar Guha's portrait." />
+              <div class="modal-title font-bolder">
+                <h3 class="font-bolder">Shouvik Kumar Guha</h3>
+                Law Professor at<br/>National University of Juridical Sciences
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>
+                Shouvik Kumar Guha,a lawyer by profession and a teacher by passion.<br>
+                Shouvik Guha is currently holding the post of Assistant Professor (Law) at the 
+                W.B.National University of Juridical Sciences(NUJS),Kolkata.He has completed his
+                 B.A. LL.B. (Hons.) from NUJS in 2010 and his LL.M. from the same place in 2013.<br><br>
+                He has been the recipient of the Nani Palkhivala Gold Medal for securing the topmost 
+                rank in the LL.M. programme, 2011-13 at NUJS, the Gopal Subramanium Scholarship, 
+                2012-2013 for securing the topmost rank in the first year of the LL.M. programme at NUJS,
+                 as well as the NUJS Student Scholarship during the B.A. LL.B. (Hons.) programme in the 
+                 academic years 2005-06 and 2009-2010 and during the LL.M. programme in the academic 
+                 year 2011-12.<br><br>
+                A keen learner,Shouvik spends his days trying to catch hold of hyper-excited law students 
+                running through the nooks and crannies of NUJS and makes them sit still long enough for
+                 him to learn from them the various finer aspects of financial laws.When he is not busy
+                  doing what he usually does, he tries to stay away from the One Ring, choose Hallows over 
+                  Horcruxes and reminds himself that the Turtle floats and that the correct answer to life’s
+                   all questions is usually 42! <br><br>
+                Shouvik has authored till date several articles, notes and policy comments for renowned 
+                national and international law journals, presented innumerable papers in several seminars, 
+                educational meets.<br><br>
               </p>
             </div>
           </div>
