--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
         />
       <div id="countdown-timer">
         <div class="countdown-timer-block">
-          <div id="countdown-timer-days">08</div>
+          <div id="countdown-timer-days">00</div>
           <p class="countdown-description countdown-description-days">DAYS</p>
         </div>
         <div class="countdown-timer-divider"><span>:</span></div>
         <div class="countdown-timer-block">
-          <div id="countdown-timer-hours">20</div>
+          <div id="countdown-timer-hours">00</div>
           <p class="countdown-description">HOURS</p>
         </div>
         <div class="countdown-timer-divider"><span>:</span></div>
         <div class="countdown-timer-block">
-          <div id="countdown-timer-minutes">42</div>
+          <div id="countdown-timer-minutes">00</div>
           <p class="countdown-description">MINUTES</p>
         </div>
         <div class="countdown-timer-divider"><span>:</span></div>
         <div class="countdown-timer-block">
-          <div id="countdown-timer-seconds">23</div>
+          <div id="countdown-timer-seconds">00</div>
           <p class="countdown-description">SECONDS</p>
         </div>
       </div>
@@ -827,9 +827,7 @@
       crossorigin="anonymous"
 
     ></script>
-    <script src="js/countdown.js"></script>
-    <scrip>
-    </scrip>
+    <!--<script src="js/countdown.js"></script>-->
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"
       integrity="sha384-vhJnz1OVIdLktyixHY4Uk3OHEwdQqPppqYR8+5mjsauETgLOcEynD9oPHhhz18Nw"
