ready for initial launch

--- a/index.html
+++ b/index.html
@@ -8,25 +8,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
+      content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds are 'LOADING LIMITLESS'."
     />
     <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey,Subhasis Das" />
     <meta property="og:title" content="TEDxHITKolkata" />
     <meta property="og:type" content="website" />
-    <meta
-      property="description"
-      content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
-    />
-    <meta property="og:image" content="https://tedxhitkolkata.com/img/fb.jpg" />
+
+    <meta property="og:image" content="https://tedxhitkolkata.in/img/fb.jpg" />
     <meta
       property="og:image:secure_url"
-      content="https://tedxhitkolkata.com/img/fb.jpg"
+      content="https://tedxhitkolkata.in/img/fb.jpg"
     />
-    <meta property="og:url" content="https://tedxhitkolkata.com/" />
+    <meta property="og:url" content="https://tedxhitkolkata.in/" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <meta name="theme-color" content="#000000" />
     <meta name="msapplication-navbutton-color" content="#000000" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#000000" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+      integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="css/style.css"
+    />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/base.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="css/fonts.css"
+    />
   </head>
   <body>
     <div id="landing-overlay">
@@ -85,44 +107,18 @@
     </div>
     <div id="main" class="font__open-sans">
       <div id="landing" class="text-center">
-        <h1 class="font__oswald sub-heading">THEME: OUT OF THE BOX</h1>
+        <h1 class="font__oswald sub-heading">THEME: LOADING LIMITLESS</h1>
         <hr class="small-hr" />
         <div class="details">
-          <p>10:00 - January 18, 2019</p>
+          <p>10:00 - March 24,2020</p>
           <p>at</p>
           <p>Swami Vivekananda Auditorium</p>
           <p>Heritage Institute of Technology</p>
         </div>
         <hr class="small-hr" />
-        <!--
-        <div class="container">
-          <p>Thank you all for amazing responses.<br/>
-            We have joint winners for the  T-Shirt design competition.
-            We will get in touch with the winners for their pass and T-shirt.<br/>
-            <b>Congratulations!</b>
-            </p>
-          <div class="row" style="padding: 20px 0px;">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-            <img src="img/1.jpg" alt="quoTED Winner 1" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;"/>
-            <p>
-              <hr style="margin: 20px 17%;"/>
-              <b>Ayush Agarwal</b><br/>
-              Computer Science and Engineering, 3rd Year.<br/><br/>
-              <hr style="margin: 20px 17%;"/>
-            </p>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-            <img src="img/2.jpg" alt="quoTED Winner 2" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;" />
-            <p>
-              <hr style="margin: 20px 17%;"/>
-              <b>Jayant Prasad</b><br/>
-              SRM University, Chennai <br/> Information Technology, 3rd Year.
-              <hr style="margin: 20px 17%;"/>
-            </p>
-            </div>
-          </div>
-        </div>
-      -->
+
+        <!--MAP-->
+
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.653208021584!2d88.41667224694913!3d22.517190965137427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDMxJzAyLjMiTiA4OMKwMjUnMDcuMyJF!5e0!3m2!1sen!2sin!4v1542473158222"
           width="600"
@@ -132,36 +128,16 @@
           title="Location of Heritage Institute of Technology, Kolkata."
           allowfullscreen
         ></iframe>
-        <!--
-          <nav class="navbar navbar-inverse navbar-sticky">
-              <div class="container-fluid">
-                  <div class="navbar-header">
-                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                      </button>
-                      <a class="navbar-brand" href="#"></a>
-                  </div>
-                  <div class="collapse navbar-collapse" id="myNavbar">
-                      <ul class="nav navbar-nav navbar-right">
-                          <li class="active"><a href="#">SPEAKERS</a></li>
-                          <li><a href="#">TEAM</a></li>
-                          <li><a href="#">ABOUT</a></li>
-                      </ul>
-                  </div>
-              </div>
-          </nav>
-          -->
+
         <div id="container-speaker" class="container">
           <h1 class="font__oswald sub-heading">SPEAKERS</h1>
           <hr class="small-hr" />
           <p>
-            An assemblage of the best speakers in the industry to inform &amp;
-            inspire you.
+            To be revealed soon! Stay tuned!
           </p>
           <hr class="small-hr" />
-          <div id="">
+          <!--
+            <div id="">
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card" data-toggle="modal" data-target="#modal-one">
                 <div class="box">
@@ -207,27 +183,6 @@
                     Thinkers Forum, the Aspire Foundation and Jobs For Her.<br />
                   </p>
                   <hr />
-                  <!--
-                    <span>
-                      <ul>
-                        <li>
-                          <a href="#"
-                            ><i class="fab fa-facebook-f" aria-hidden="true"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="#"
-                            ><i class="fab fa-twitter" aria-hidden="true"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="#"
-                            ><i class="fab fa-instagram" aria-hidden="true"></i
-                          ></a>
-                        </li>
-                      </ul>
-                    </span>
-                    -->
                 </div>
               </div>
             </div>
@@ -374,7 +329,8 @@
               </div>
             </div>
           </div>
-        </div>
+        --></div>
+        <!--
         <div class="container no-padding" style="margin-top: 0px;">
           <h1 class="font__oswald sub-heading">PERFORMERS</h1>
           <hr class="small-hr" />
@@ -404,6 +360,8 @@
             </div>
           </div>
         </div>
+        -->
+        <!--TEDx BANNER-->
         <figure class="no-padding no-margin">
           <img
             src="img/banner.jpg"
@@ -416,6 +374,9 @@
             >
           </figcaption>
         </figure>
+
+        <!--TEAM-->
+        <!--
         <div class="container no-padding" style="margin-top: 50px;">
           <h1 class="font__oswald sub-heading">TEAM</h1>
           <hr class="small-hr" />
@@ -436,7 +397,11 @@
             >
           </p>
         </div>
+        -->
       </div>
+
+      <!--FOOTER-->
+
       <footer>
         <hr />
         <div class="container">
@@ -448,9 +413,6 @@
                   href="https://facebook.com/sharer/sharer.php"
                   aria-label="Share this website on Facebook."
                   ><i class="fab fa-facebook-f"></i
-                ></a>
-                <a href="" aria-label="Share this website on Twitter."
-                  ><i class="fab fa-twitter"></i
                 ></a>
               </p>
             </div>
@@ -524,7 +486,7 @@
               <p>
                 This independent TEDx event is operated under license from TED.
               </p>
-              <p>&copy;2019 | TEDxHITKolkata</p>
+              <p>&copy;2020 | TEDxHITKolkata</p>
             </div>
           </div>
         </div>
@@ -533,6 +495,7 @@
 
     <!--MODALS GO HERE-->
 
+    <!--
     <div id="modals-speaker" class="font__open-sans">
       <div class="modal fade" id="modal-one" role="dialog">
         <div class="modal-dialog">
@@ -874,31 +837,8 @@
         </div>
       </div>
     </div>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
-      integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="css/style.css"
-    />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/base.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="css/fonts.css"
-    />
+
+    -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
