--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
+      content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds are 'LOADING LIMITLESS'."
     />
-    <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey" />
+    <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey,Subhasis Das" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
-    <meta name="theme-color" content="#000000">
-    <meta name="msapplication-navbutton-color" content="#000000">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
+    <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-navbutton-color" content="#000000" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#000000" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
@@ -44,156 +44,178 @@
 
   <body>
     <div class="font__open-sans">
-          <div class="container">
-                  <br/><br/>
-                  <h1 class="font__oswald text-center">ABOUT</h1>
-                  <hr class="small-hr" />
-                  <br/>
-                  <div class="row">
-                      <div class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center">
-                          <h1>About TEDxHITKolkata</h1><hr/>
-                          <p>
-                              Have you ever taken a leap of faith,gone out of the comfort zone and done something extremely mind boggling? <br/>
+      <div class="container">
+        <br /><br />
+        <h1 class="font__oswald text-center">ABOUT</h1>
+        <hr class="small-hr" />
+        <br />
+        <div class="row">
+          <div
+            class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center"
+          >
+            <h1>About TEDxHITKolkata</h1>
+            <hr />
+            <p>
+              Have you ever taken a leap of faith,gone out of the comfort zone
+              and done something extremely mind boggling? <br />
 
-                              18th January 2019 will hold the event of TEDX at our very own esteemed  institution.<br/>
-                              For the first time ever in the history of Heritage Institute  of Technology, Kolkata,a group of 9 celebrated intellect, from all over India, along with 4 clubs of HITK will come together at one stage and give us the exposure to the mamoth world that is yet to unravel infront of us through their very own captivating life experiences.<br/><br/>
-                              Presenting with the theme OUT OF THE BOX TEDXHITKOLKATA, is an enriching knowledge extravaganza!
-                          </p>
-                      </div>
-                  </div>
-                  <br/><br/><br/>
-                  <div class="row">
-                      <div class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center">
-                          <h1>About TED</h1><hr/>
-                          <p>
-                              TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day
-                              conference in California 30 years ago, TED has grown to support its mission with multiple
-                              initiatives. The two annual TED Conferences invite the world's leading thinkers and doers to speak for 18
-                              minutes or less. Many of these talks are then made available, free, at TED.com. TED speakers have
-                              included Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe
-                              Starck, Ngozi Okonjo-Iweala, Sal Khan and Daniel Kahneman. <br/>
-                              The annual TED Conference takes place each spring in Vancouver, British Columbia. TED's
-                              media initiatives include TED.com, where new TED Talks are posted daily; the Open Translation
-                              Project, which provides subtitles and interactive transcripts as well as translations from
-                              volunteers worldwide; the educational initiative TED-Ed. TED has established the annual TED Prize,
-                              where exceptional individuals with a wish to change the world get help translating their
-                              wishes into action; TEDx, which supports individuals or groups in hosting local, self- organized
-                              TED-style events around the world, and the TED Fellows program, helping world-changing innovators
-                              from around the globe to amplify the impact of their remarkable projects and activities.
-                          </p>
-                      </div>
-                  </div>
-                  <br/><br/><br/>
-                  <div class="row">
-                      <div class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center">
-                          <h1 class="no-margin">About TEDx</h1>
-                          <small style="display: inline-block; padding-bottom: 12px;">x = independently organized TED event</small><hr/>
-                          <p>
-                              In the spirit of ideas worth spreading, TEDx is a program of local, self-organized
-                              events that bring people topgether to share a TED-like experience. At a TEDx event, TED Talks video and live
-                              speakers combine to spark deep discussion and connection. These local, self-organized events are
-                              branded TEDx, where x = independently organized TED event. The TED Conference provides general
-                              guidance for the TEDx program, but individual TEDx events are self-organized. (Subject to certain
-                              rules and regulations.)
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <br/><br/>
+              24th March 2020 will hold the event of TEDX at our very own
+              esteemed institution.<br />
+              For the first time ever in the history of Heritage Institute of
+              Technology, Kolkata,a group of 9 celebrated intellect, from all
+              over India, along with 4 clubs of HITK will come together at one
+              stage and give us the exposure to the mamoth world that is yet to
+              unravel infront of us through their very own captivating life
+              experiences.<br /><br />
+              Presenting with the theme OUT OF THE BOX TEDXHITKOLKATA, is an
+              enriching knowledge extravaganza!
+            </p>
+          </div>
+        </div>
+        <br /><br /><br />
+        <div class="row">
+          <div
+            class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center"
+          >
+            <h1>About TED</h1>
+            <hr />
+            <p>
+              TED is a nonprofit organization devoted to Ideas Worth Spreading.
+              Started as a four-day conference in California 30 years ago, TED
+              has grown to support its mission with multiple initiatives. The
+              two annual TED Conferences invite the world's leading thinkers and
+              doers to speak for 18 minutes or less. Many of these talks are
+              then made available, free, at TED.com. TED speakers have included
+              Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson,
+              Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala, Sal Khan
+              and Daniel Kahneman. <br />
+              The annual TED Conference takes place each spring in Vancouver,
+              British Columbia. TED's media initiatives include TED.com, where
+              new TED Talks are posted daily; the Open Translation Project,
+              which provides subtitles and interactive transcripts as well as
+              translations from volunteers worldwide; the educational initiative
+              TED-Ed. TED has established the annual TED Prize, where
+              exceptional individuals with a wish to change the world get help
+              translating their wishes into action; TEDx, which supports
+              individuals or groups in hosting local, self- organized TED-style
+              events around the world, and the TED Fellows program, helping
+              world-changing innovators from around the globe to amplify the
+              impact of their remarkable projects and activities.
+            </p>
+          </div>
+        </div>
+        <br /><br /><br />
+        <div class="row">
+          <div
+            class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center"
+          >
+            <h1 class="no-margin">About TEDx</h1>
+            <small style="display: inline-block; padding-bottom: 12px;"
+              >x = independently organized TED event</small
+            >
+            <hr />
+            <p>
+              In the spirit of ideas worth spreading, TEDx is a program of
+              local, self-organized events that bring people topgether to share
+              a TED-like experience. At a TEDx event, TED Talks video and live
+              speakers combine to spark deep discussion and connection. These
+              local, self-organized events are branded TEDx, where x =
+              independently organized TED event. The TED Conference provides
+              general guidance for the TEDx program, but individual TEDx events
+              are self-organized. (Subject to certain rules and regulations.)
+            </p>
+          </div>
+        </div>
       </div>
-      <footer>
-        <hr />
-        <div class="container">
-          <div class="row font-bolder">
-            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-              <p>
-                SHARE
-                <a
-                  href="https://facebook.com/sharer/sharer.php"
-                  aria-label="Share this website on Facebook."
-                  ><i class="fab fa-facebook-f"></i
-                ></a>
-                <a href="" aria-label="Share this website on Twitter."
-                  ><i class="fab fa-twitter"></i
-                ></a>
-              </p>
-            </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-              <p>
-                FOLLOW US
-                <a
-                  rel="noreferrer noopener"
-                  href="https://facebook.com/tedxhitkolkata/"
-                  target="_blank"
-                  aria-label="Follow us on Facebook."
-                  ><i class="fab fa-facebook"></i
-                ></a>
-                <a
-                  rel="noreferrer noopener"
-                  href="https://twitter.com/hitkolkata"
-                  target="_blank"
-                  aria-label="Follow us on Twitter."
-                  ><i class="fab fa-twitter"></i
-                ></a>
-                <a
-                  rel="noreferrer noopener"
-                  href="https://instagram.com/tedx_hitkolkata/"
-                  target="_blank"
-                  aria-label="Follow us on Instagram."
-                  ><i class="fab fa-instagram" aria-hidden="true"></i
-                ></a>
-              </p>
-            </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-              <p><a href="mailto:tedxhitkolkata@gmail.com">EMAIL US</a></p>
-            </div>
-          </div>
-          <hr
-            style="margin-top: 12px; border-width: 2px; border-color: red; margin-right: 80%;"
-          />
-        </div>
-
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-              <h4 class="font-bolder">ABOUT</h4>
-              <p>
-                <a href="">TED</a><br />
-                <a href="">TEDx</a><br />
-                <a href="">TEDxHITKolkata</a>
-              </p>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <h4 class="spacer">&nbsp;</h4>
-              <p>
-                <span class="font-bolder"
-                  ><a
-                    rel="noreferrer noopener"
-                    href="http://heritageit.edu"
-                    target="_blank"
-                    >Heritage Institute of Technology</a
-                  ></span
-                ><br />
-                Chowbaga Road, Anandapur,<br />
-                PO: East Kolkata Twp, Kolkata - 700107
-              </p>
-            </div>
-          </div>
-          <hr
-            style="border-width: 2px; border-color: red; margin-right: 80%;"
-          />
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <p>
-                This independent TEDx event is operated under license from TED.
-              </p>
-              <p>&copy;2019 | TEDxHITKolkata</p>
-            </div>
-          </div>
-        </div>
-      </footer>
+      <br /><br />
     </div>
+    <footer>
+      <hr />
+      <div class="container">
+        <div class="row font-bolder">
+          <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <p>
+              SHARE
+              <a
+                href="https://facebook.com/sharer/sharer.php"
+                aria-label="Share this website on Facebook."
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+            </p>
+          </div>
+          <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <p>
+              FOLLOW US
+              <a
+                rel="noreferrer noopener"
+                href="https://facebook.com/tedxhitkolkata/"
+                target="_blank"
+                aria-label="Follow us on Facebook."
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a
+                rel="noreferrer noopener"
+                href="https://twitter.com/hitkolkata"
+                target="_blank"
+                aria-label="Follow us on Twitter."
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a
+                rel="noreferrer noopener"
+                href="https://instagram.com/tedx_hitkolkata/"
+                target="_blank"
+                aria-label="Follow us on Instagram."
+                ><i class="fab fa-instagram" aria-hidden="true"></i
+              ></a>
+            </p>
+          </div>
+          <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <p><a href="mailto:tedxhitkolkata@gmail.com">EMAIL US</a></p>
+          </div>
+        </div>
+        <hr
+          style="margin-top: 12px; border-width: 2px; border-color: red; margin-right: 80%;"
+        />
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <h4 class="font-bolder">ABOUT</h4>
+            <p>
+              <a href="">TED</a><br />
+              <a href="">TEDx</a><br />
+              <a href="">TEDxHITKolkata</a>
+            </p>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <h4 class="spacer">&nbsp;</h4>
+            <p>
+              <span class="font-bolder"
+                ><a
+                  rel="noreferrer noopener"
+                  href="http://heritageit.edu"
+                  target="_blank"
+                  >Heritage Institute of Technology</a
+                ></span
+              ><br />
+              Chowbaga Road, Anandapur,<br />
+              PO: East Kolkata Twp, Kolkata - 700107
+            </p>
+          </div>
+        </div>
+        <hr style="border-width: 2px; border-color: red; margin-right: 80%;" />
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <p>
+              This independent TEDx event is operated under license from TED.
+            </p>
+            <p>&copy;2020 | TEDxHITKolkata</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
