theme logo updated

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
           <p class="countdown-description">SECONDS</p>
         </div>
       </div>
-      <img id="landing-overlay-image" src="img/bg.png" alt="Theme banner." />
+      <img
+        id="landing-overlay-image"
+        src="img/theme-logo.png"
+        alt="Theme banner."
+      />
       <div id="overlay-social">
         <a
           rel="noreferrer noopener"
