theme logo made responsive

--- a/index.html
+++ b/index.html
@@ -79,11 +79,17 @@
           <p class="countdown-description">SECONDS</p>
         </div>
       </div>
+
+      <!--Theme Logo-->
       <img
         id="landing-overlay-image"
         src="img/theme-logo.png"
         alt="Theme banner."
       />
+      <!--Logo again, cause I dont wanna mess with someone else's css-->
+      <img src="img/theme-logo.png" id="theme-for-mobile" />
+
+      <!--SOCIAL ICONS-->
       <div id="overlay-social">
         <a
           rel="noreferrer noopener"
