--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         </figure>
 
         <!--TEAM-->
-        <!--
+
         <div class="container no-padding" style="margin-top: 50px;">
           <h1 class="font__oswald sub-heading">TEAM</h1>
           <hr class="small-hr" />
@@ -395,19 +395,6 @@
           <br />
           <div id="container-team"></div>
         </div>
-        <div class="container no-padding">
-          <div id="container-team-extra"></div>
-        </div>
-        <div class="container no-padding">
-          <p class="text-center" style="margin: 0px 0px 50px 0px;">
-            <a
-              id="show-extra-members"
-              aria-label="Show the remaining team members."
-              ><u id="show-extra-members-content">Show 'em all</u></a
-            >
-          </p>
-        </div>
-        -->
       </div>
 
       <!--FOOTER-->
@@ -860,6 +847,7 @@
       integrity="sha384-vhJnz1OVIdLktyixHY4Uk3OHEwdQqPppqYR8+5mjsauETgLOcEynD9oPHhhz18Nw"
       crossorigin="anonymous"
     ></script>
+    <script src="js/team.json"></script>
     <script src="js/script.js"></script>
     <script src="js/lazyload.js"></script>
     <script>
