covid alert update

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         class="img-responsive"
         alt="TEDx HIT Kolkata's logo."
       />
+      <img src="/img/covid.jpeg" class="covid" />
+      <!--TIMER
+
       <div id="countdown-timer">
         <div class="countdown-timer-block">
           <div id="countdown-timer-days">00</div>
@@ -79,6 +82,7 @@
           <p class="countdown-description">SECONDS</p>
         </div>
       </div>
+      -->
 
       <!--Theme Logo-->
       <img
@@ -87,7 +91,7 @@
         alt="Theme banner."
       />
       <!--Logo again, cause I dont wanna mess with someone else's css-->
-      <img src="img/theme-logo.png" id="theme-for-mobile" />
+      <!-- <img src="img/theme-logo.png" id="theme-for-mobile" /> -->
 
       <!--SOCIAL ICONS-->
       <div id="overlay-social">
@@ -115,20 +119,28 @@
       </div>
       <button id="explore-button" class="btn">EXPLORE</button>
     </div>
+
     <div id="main" class="font__open-sans">
       <div id="landing" class="text-center">
         <h1 class="font__oswald sub-heading">THEME: LOADING LIMITLESS</h1>
         <hr class="small-hr" />
         <div class="details">
-          <p>10:00 - March 24,2020</p>
+          <p>
+            Due to complete lockdown and government regulations, we are sorry to
+            say that TEDxHITKolkata has been postponed until further notice .
+            Nevertheless, we will be back once it's over. Till then, we wish you
+            all good health. Stay safe and stay at your homes because we can
+            combat this.... We believe nothing is limitless.
+          </p>
+          <!--<p>10:00 - March 24,2020</p>
           <p>at</p>
           <p>Swami Vivekananda Auditorium</p>
-          <p>Heritage Institute of Technology</p>
+          <p>Heritage Institute of Technology</p> -->
         </div>
         <hr class="small-hr" />
 
         <!--MAP-->
-
+        <!--
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.653208021584!2d88.41667224694913!3d22.517190965137427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDMxJzAyLjMiTiA4OMKwMjUnMDcuMyJF!5e0!3m2!1sen!2sin!4v1542473158222"
           width="600"
@@ -138,7 +150,7 @@
           title="Location of Heritage Institute of Technology, Kolkata."
           allowfullscreen
         ></iframe>
-
+-->
         <div id="container-speaker" class="container">
           <h1 class="font__oswald sub-heading">SPEAKERS</h1>
           <hr class="small-hr" />
