few more css fixes

--- a/index.html
+++ b/index.html
@@ -51,83 +51,84 @@
 		/>
 	</head>
 	<body>
-		<div id="landing-overlay">
-			<img
-				id="landing-overlay-logo"
-				src="img/logo.jpg"
-				class="img-responsive"
-				alt="TEDx HIT Kolkata's logo."
-			/>
-			<div class="center-content">
-				<div id="day-count"></div>
-				<br />
-				<!--Theme Logo-->
+		<div id="root">
+			<div id="landing-overlay">
 				<img
-					id="landing-overlay-image"
-					src="img/theme-logo.png"
-					alt="Theme banner."
+					id="landing-overlay-logo"
+					src="img/logo.jpg"
+					class="img-responsive"
+					alt="TEDx HIT Kolkata's logo."
 				/>
-				<!--Logo again, cause I dont wanna mess with someone else's css-->
-				<img src="img/theme-logo.png" id="theme-for-mobile" />
-			</div>
-
-			<!--SOCIAL ICONS-->
-			<div id="overlay-social">
-				<a
-					rel="noreferrer noopener"
-					href="https://facebook.com/tedxhitkolkata/"
-					target="_blank"
-					aria-label="Follow us on Facebook."
-					><i class="fab fa-facebook"></i
-				></a>
-				<a
-					rel="noreferrer noopener"
-					href="https://twitter.com/hitkolkata"
-					target="_blank"
-					aria-label="Follow us on Twitter."
-					><i class="fab fa-twitter"></i
-				></a>
-				<a
-					rel="noreferrer noopener"
-					href="https://instagram.com/tedx_hitkolkata/"
-					target="_blank"
-					aria-label="Follow us on Instagram."
-					><i class="fab fa-instagram" aria-hidden="true"></i
-				></a>
-			</div>
-			<button id="explore-button" class="btn">EXPLORE</button>
-		</div>
-
-		<div id="main" class="font__open-sans">
-			<div id="landing" class="text-center">
-				<h1 class="font__oswald sub-heading">THEME: LOADING LIMITLESS</h1>
-				<hr class="small-hr" />
-				<div class="details">
-					<p>16 January 2021</p>
-					<p>at</p>
-					<p>Swami Vivekananda Auditorium</p>
-					<p>Heritage Institute of Technology</p>
+				<div class="center-content">
+					<div id="day-count"></div>
+					<br />
+					<!--Theme Logo-->
+					<img
+						id="landing-overlay-image"
+						src="img/theme-logo.png"
+						alt="Theme banner."
+					/>
+					<!--Logo again, cause I dont wanna mess with someone else's css-->
+					<img src="img/theme-logo.png" id="theme-for-mobile" />
 				</div>
-				<hr class="small-hr" />
 
-				<!--MAP-->
+				<!--SOCIAL ICONS-->
+				<div id="overlay-social">
+					<a
+						rel="noreferrer noopener"
+						href="https://facebook.com/tedxhitkolkata/"
+						target="_blank"
+						aria-label="Follow us on Facebook."
+						><i class="fab fa-facebook"></i
+					></a>
+					<a
+						rel="noreferrer noopener"
+						href="https://twitter.com/hitkolkata"
+						target="_blank"
+						aria-label="Follow us on Twitter."
+						><i class="fab fa-twitter"></i
+					></a>
+					<a
+						rel="noreferrer noopener"
+						href="https://instagram.com/tedx_hitkolkata/"
+						target="_blank"
+						aria-label="Follow us on Instagram."
+						><i class="fab fa-instagram" aria-hidden="true"></i
+					></a>
+				</div>
+				<button id="explore-button" class="btn">EXPLORE</button>
+			</div>
 
-				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.653208021584!2d88.41667224694913!3d22.517190965137427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDMxJzAyLjMiTiA4OMKwMjUnMDcuMyJF!5e0!3m2!1sen!2sin!4v1542473158222"
-					width="600"
-					height="500"
-					frameborder="0"
-					style="border: 0"
-					title="Location of Heritage Institute of Technology, Kolkata."
-					allowfullscreen
-				></iframe>
-
-				<div id="container-speaker" class="container">
-					<h1 class="font__oswald sub-heading">SPEAKERS</h1>
+			<div id="main" class="font__open-sans">
+				<div id="landing" class="text-center">
+					<h1 class="font__oswald sub-heading">THEME: LOADING LIMITLESS</h1>
 					<hr class="small-hr" />
-					<div id="speakers-area"></div>
-				</div>
-				<!--
+					<div class="details">
+						<p>16 January 2021</p>
+						<p>at</p>
+						<p>Swami Vivekananda Auditorium</p>
+						<p>Heritage Institute of Technology</p>
+					</div>
+					<hr class="small-hr" />
+
+					<!--MAP-->
+
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.653208021584!2d88.41667224694913!3d22.517190965137427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDMxJzAyLjMiTiA4OMKwMjUnMDcuMyJF!5e0!3m2!1sen!2sin!4v1542473158222"
+						width="600"
+						height="500"
+						frameborder="0"
+						style="border: 0"
+						title="Location of Heritage Institute of Technology, Kolkata."
+						allowfullscreen
+					></iframe>
+
+					<div id="container-speaker" class="container">
+						<h1 class="font__oswald sub-heading">SPEAKERS</h1>
+						<hr class="small-hr" />
+						<div id="speakers-area"></div>
+					</div>
+					<!--
         <div class="container no-padding" style="margin-top: 0px;">
           <h1 class="font__oswald sub-heading">PERFORMERS</h1>
           <hr class="small-hr" />
@@ -158,126 +159,130 @@
           </div>
         </div>
         -->
-				<!--TEDx BANNER-->
-				<figure class="no-padding no-margin">
-					<img
-						src="img/banner.jpg"
-						class="banner"
-						alt="TEDx HIT Kolkata's event banner."
-					/>
-					<figcaption>
-						<small style="color: #ffffff"
-							>linkedin.com/in/ayushagarwal28/</small
-						>
-					</figcaption>
-				</figure>
+					<!--TEDx BANNER-->
+					<figure class="no-padding no-margin">
+						<img
+							src="img/banner.jpg"
+							class="banner"
+							alt="TEDx HIT Kolkata's event banner."
+						/>
+						<figcaption>
+							<small style="color: #ffffff"
+								>linkedin.com/in/ayushagarwal28/</small
+							>
+						</figcaption>
+					</figure>
 
-				<!--TEAM-->
+					<!--TEAM-->
 
-				<div class="container no-padding" style="margin-top: 50px">
-					<h1 class="font__oswald sub-heading">TEAM</h1>
-					<hr class="small-hr" />
-					<p>Meet the people who brought it all together.</p>
-					<hr class="small-hr" />
-					<br />
-					<div id="container-team"></div>
-				</div>
-			</div>
-
-			<!--FOOTER-->
-
-			<footer>
-				<hr />
-				<div class="container">
-					<div class="row font-bolder">
-						<div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-							<p>
-								SHARE
-								<a
-									href="https://facebook.com/sharer/sharer.php"
-									aria-label="Share this website on Facebook."
-									><i class="fab fa-facebook-f"></i
-								></a>
-							</p>
-						</div>
-						<div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-							<p>
-								FOLLOW US
-								<a
-									rel="noreferrer noopener"
-									href="https://facebook.com/tedxhitkolkata/"
-									target="_blank"
-									aria-label="Follow us on Facebook."
-									><i class="fab fa-facebook"></i
-								></a>
-								<a
-									rel="noreferrer noopener"
-									href="https://twitter.com/hitkolkata"
-									target="_blank"
-									aria-label="Follow us on Twitter."
-									><i class="fab fa-twitter"></i
-								></a>
-								<a
-									rel="noreferrer noopener"
-									href="https://instagram.com/tedx_hitkolkata/"
-									target="_blank"
-									aria-label="Follow us on Instagram."
-									><i class="fab fa-instagram" aria-hidden="true"></i
-								></a>
-							</p>
-						</div>
-						<div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-							<p><a href="mailto:tedxhitkolkata@gmail.com">EMAIL US</a></p>
-						</div>
+					<div class="container no-padding" style="margin-top: 50px">
+						<h1 class="font__oswald sub-heading">TEAM</h1>
+						<hr class="small-hr" />
+						<p>Meet the people who brought it all together.</p>
+						<hr class="small-hr" />
+						<br />
+						<div id="container-team"></div>
 					</div>
-					<hr
-						style="
-							margin-top: 12px;
-							border-width: 2px;
-							border-color: red;
-							margin-right: 80%;
-						"
-					/>
 				</div>
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-							<h4 class="font-bolder">ABOUT</h4>
-							<p>
-								<a href="about.html" target="_blank">TED</a><br />
-								<a href="about.html" target="_blank">TEDx</a><br />
-								<a href="about.html" target="_blank">TEDxHITKolkata</a>
-							</p>
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<h4 class="spacer">&nbsp;</h4>
-							<p>
-								<span class="font-bolder"
-									><a
+
+				<!--FOOTER-->
+
+				<footer>
+					<hr />
+					<div class="container">
+						<div class="row font-bolder">
+							<div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+								<p>
+									SHARE
+									<a
+										href="https://facebook.com/sharer/sharer.php"
+										aria-label="Share this website on Facebook."
+										><i class="fab fa-facebook-f"></i
+									></a>
+								</p>
+							</div>
+							<div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+								<p>
+									FOLLOW US
+									<a
 										rel="noreferrer noopener"
-										href="http://heritageit.edu"
+										href="https://facebook.com/tedxhitkolkata/"
 										target="_blank"
-										>Heritage Institute of Technology</a
-									></span
-								><br />
-								Chowbaga Road, Anandapur,<br />
-								PO: East Kolkata Twp, Kolkata - 700107
-							</p>
+										aria-label="Follow us on Facebook."
+										><i class="fab fa-facebook"></i
+									></a>
+									<a
+										rel="noreferrer noopener"
+										href="https://twitter.com/hitkolkata"
+										target="_blank"
+										aria-label="Follow us on Twitter."
+										><i class="fab fa-twitter"></i
+									></a>
+									<a
+										rel="noreferrer noopener"
+										href="https://instagram.com/tedx_hitkolkata/"
+										target="_blank"
+										aria-label="Follow us on Instagram."
+										><i class="fab fa-instagram" aria-hidden="true"></i
+									></a>
+								</p>
+							</div>
+							<div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+								<p><a href="mailto:tedxhitkolkata@gmail.com">EMAIL US</a></p>
+							</div>
+						</div>
+						<hr
+							style="
+								margin-top: 12px;
+								border-width: 2px;
+								border-color: red;
+								margin-right: 80%;
+							"
+						/>
+					</div>
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+								<h4 class="font-bolder">ABOUT</h4>
+								<p>
+									<a href="about.html" target="_blank">TED</a><br />
+									<a href="about.html" target="_blank">TEDx</a><br />
+									<a href="about.html" target="_blank">TEDxHITKolkata</a>
+								</p>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+								<h4 class="spacer">&nbsp;</h4>
+								<p>
+									<span class="font-bolder"
+										><a
+											rel="noreferrer noopener"
+											href="http://heritageit.edu"
+											target="_blank"
+											>Heritage Institute of Technology</a
+										></span
+									><br />
+									Chowbaga Road, Anandapur,<br />
+									PO: East Kolkata Twp, Kolkata - 700107
+								</p>
+							</div>
+						</div>
+						<hr
+							style="border-width: 2px; border-color: red; margin-right: 80%"
+						/>
+					</div>
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12">
+								<p>
+									This independent TEDx event is operated under license from
+									TED.
+								</p>
+								<p>&copy;2020 | TEDxHITKolkata</p>
+							</div>
 						</div>
 					</div>
-					<hr style="border-width: 2px; border-color: red; margin-right: 80%" />
-				</div>
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-12">
-							<p>
-								This independent TEDx event is operated under license from TED.
-							</p>
-							<p>&copy;2020 | TEDxHITKolkata</p>
-						</div>
-					</div>
-				</div>
-			</footer>
+				</footer>
+			</div>
 		</div>
 
 		<!-- MODALS GO HERE-->
